--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -3,17 +3,23 @@
   right: 10px;
   top: 10px;
   display: flex;
+
 }
 
 .login-form {
   display: inline;
+
 }
 
 
 input {
   margin-right: 10px;
+
 }
 
 button {
   margin-right: 10px;
+  background-color: rgba(223, 184, 99, 0.644);
+  border: none;
+  border-radius: 3%;
 }
