--- a/src/assets/styles/nav.css
+++ b/src/assets/styles/nav.css
@@ -3,7 +3,8 @@ nav {
   margin: 20px auto;
   font-size: 1.2rem;
   width: 50%;
-  background-color: rgb(244, 244, 244);
+  background-color: rgba(223, 184, 99, 0.644);
+  border-radius: 3%;
   text-align: center;
   font-family: sans-serif;
 }
